--- a/css/fuente-2.css
+++ b/css/fuente-2.css
@@ -1,11 +1,21 @@
-h2{
-    font-size: 3em;/*tamaño de la letra*/
-    font-weight: 900; /*grosor de la letra*/
-    font-style: bebas-neve; /*estilos de la letra*/
-    
+*{
+    margin: 0;
+    border: 0;    
 }
+.main-box{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(24,24,24,.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5em;
+}  
+
 .bebas-neve{
     font-family:'Bebas Neue',sans-serif;
+    text-align: center;
+    color: rgba(241,7,7,0.9)
 }
 /* bebas-neue-regular - latin */
 @font-face {
