--- a/css/fuente-2.css
+++ b/css/fuente-2.css
@@ -5,24 +5,24 @@
 .main-box{
     width: 100%;
     height: 100vh;
-    background-color: rgb(24,24,24,.9);
+    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 5em;
+    font-size: 10em;
 }  
 
 .bebas-neve{
     font-family:'Bebas Neue',sans-serif;
     text-align: center;
-    color: rgba(241,7,7,0.9)
+    color: red
 }
 /* bebas-neue-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Bebas Neue';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     src: url('../fonts/bebas-neue-v9-latin-regular.eot'); /* IE9 Compat Modes */
     src: url('../fonts/bebas-neue-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('../fonts/bebas-neue-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
