--- a/css/fuente-3.css
+++ b/css/fuente-3.css
@@ -1,11 +1,22 @@
-h2{
-    font-size: 3em;/*tamaño de la letra*/
-    font-weight: 900; /*grosor de la letra*/
-    font-style: "waltograph"; /*estilos de la letra*/
-
+*{
+    margin: 0;
+    border: 0;    
 }
+
+.fondo{
+    width: 100%;
+    height: 100vh;
+    background-color:white (0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+}  
+
 .waltograph{
-    font-family: "waltograph",sans-serif;
-
-
-}
+    font-family: 'Waltograph',sans-serif;
+    font-family: 'Waltograph UI', sans-serif;
+    text-align: center;
+    font-weight: 100;
+    color: blue;                
+} 
