--- a/css/fuente-2.css
+++ b/css/fuente-2.css
@@ -11,18 +11,18 @@
     align-items: center;
 }  
 
-.bebas-newe{
+.special-font{
     font-family:'Bebas Neue',sans-serif;
     text-align: center;
     color: red;
-    font-size: 10em;
+    font-size: 15em;
 }
 /* bebas-neue-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Bebas Neue';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     src: url('../fonts/bebas-neue-v9-latin-regular.eot'); /* IE9 Compat Modes */
     src: url('../fonts/bebas-neue-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('../fonts/bebas-neue-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
