--- a/css/fuente-3.css
+++ b/css/fuente-3.css
@@ -4,24 +4,27 @@
 }
 
 .main-box{
+    width: 100%;
+    height: 100vh;
     background-color: rgb(3,13,66);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+
 }
 .waltograph{
     font-family: "waltograph";
-    font-size: 10em;
+    text-align: center;
     color: whitesmoke;
+    font-size: 10em;
 }
 /* bebas-waltograph - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'waltograph';
     font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/waltograph42.otf'),
-         url('../fonts/waltographUI.ttf');
+    font-weight: 700;
+    src: url('../fonts/waltograph42.otf');
+    src: url('../fonts/waltographUI.ttf')format("embedded-opentype"),
 
   }
