--- a/css/colors.css
+++ b/css/colors.css
@@ -1,10 +1,13 @@
 *{
     margin: 0;
-    border: 0;    
-    display: flex;
-    flex-direction: column;
+    border: 0;
 }
 
+
+.nombre, .rgb, .hexadecimal{
+    display: flex;
+
+}
 .box-1{
     background-color:beige;
     width: 300px;
