--- a/css/fuente-1.css
+++ b/css/fuente-1.css
@@ -1,31 +1,25 @@
-*{
-    margin: 0%;
-    border: 0;
+body {
+    background-image: url(https://images2.alphacoders.com/126/1260061.jpg);
+    background-size: cover;
+    background-repeat: none; 
 }
-.main-box{
-    width: 100%;
-    height: 100vh;
-    background: -webkit-linear-gradient(black, red);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .cinzel{
     font-family:'Cinzel';
     text-align: center;
     color: white;
     font-size: 10em;
 }
-/* cinzel-regular - latin */
+/* cinzel-700 - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Cinzel';
     font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/cinzel-v19-latin-regular.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cinzel-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cinzel-v19-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cinzel-v19-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cinzel-v19-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cinzel-v19-latin-regular.svg#Cinzel') format('svg'); /* Legacy iOS */
+    font-weight: 700;
+    src: url('../fonts/cinzel-v19-latin-700.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/cinzel-v19-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/cinzel-v19-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/cinzel-v19-latin-700.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/cinzel-v19-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/cinzel-v19-latin-700.svg#Cinzel') format('svg'); /* Legacy iOS */
   }
